<resources>
    <string name="app_name">Aggrobuddy</string>
    <string name="favourites">Favourites</string>
    <string name="profile">My Account</string>
    <string name="faq">FAQ</string>
    <string name="about_app">About App</string>
    <string name="developer">Developer</string>
    <string name="log_out">Log Out</string>
    <string name="transaction_history">Transaction History</string>
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="navigation_drawaer">Navigation Drawaer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Closed Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard_Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="transaction_history_fragment">Transaction_History_Fragment</string>
    <string name="frequently_asked_question">Frequently_Asked_Question</string>
    <string name="developers">Developers</string>
    <string name="privacy_policy_fragment">Privacy_Policy_Fragment</string>
    <string name="about_app_fragment">About_App_Fragment</string>
    <string name="help_fragnment">Help Fragnment</string>
    <string name="logout_fragment">LogOut Fragment</string>
    <string name="Q.01">What is the Aggrobuddy</string>
    <string name="Ans.01">Aggrobuddy is a Startup Project which is develop and founded by Ashish Ranjan.This Application help farmer,worker and merchant to communicate with eachother and to work together and try to accompolished the work.</string>
    <string name="Q.02">Who built this application ? </string>
    <string name="Ans.02">I said that it is a startup project so it is a combination of 2 person. some of the work is done by Ashihs Ranjan like theam develop and thought, and some of the fine aspect is develop by the Shalu Ambasta who is the project partner.so , we can say it develop by the team members.</string>
    <string name="Q.03">How it help the Farmer ? </string>
    <string name="Ans.03">Farmer is the backbone of the our Country. As per information 65% people are dependent on the farming. Apart from that as per survey 50% or above uneducated and broker take the benifites of it. Broker take the commisson from the both side that is from farmer and the merchant. Theirfor if the direct communication held between the merchant and the farmer the brokerage cost is reduce and farmer get benifites.</string>
    <string name="Q.04">How it help the merchant ? </string>
    <string name="Ans.04">As we earlier said that their is no direct communication between the farmer and merchant so merchant not abke to know the exact price of any product, that take time to the  whole process.and also the farmer dependent on the broker so some time due to unavalibility of any of them lead to the cancle order.</string>
    <string name="Q.05">How it help the Worker ? </string>
    <string name="Ans.05">Woker is the fundamental unit for all types of the work.Any types of work is only possible due to worker. in Aggrobuddy if someone register itself as a worker then they will got chance for a job.they have to work as per instruction given by the Farmer and Merchant.they have to work like packing ,filing,sepration and loading </string>
    <string name="Q.06">What is the Main theam of this Application ?</string>
    <string name="Ans.06">I would like to develop a platform where farmers would sell their cultivated products and merchants would buy the products of their interest.The idea is to create such an app which can provide aplatform to the farmer As it is obvious that farmers do not  generally use or install these kinds of app without any  past reference. For solving this issue we can promote  our app by establishing a help centre inside/nearby  villages.</string>
    <string name="rate">Rate :-</string>
    <string name="ashish_ranjan">Ashish Ranjan</string>
    <string name="aviashishranjan_gmail_com">aviashishranjan@gmail.com</string>
    <string name="_91_6206416452">+91 6206416452</string>
    <string name="shalu_kumari">Shalu Ambasta</string>
    <string name="ambastashalu2u919_gmail_com">ambastashalu2u919@gmail.com</string>
    <string name="mohamad_aknan">Mohamad Aknan</string>
    <string name="aknan_cse_gmail_com">aknan.cse@gmail.com</string>
    <string name="component_of_aggrobuddy">Component Of Aggrobuddy</string>
    <string name="aggrobuddy_is_the_fine_platform_for_the_farmner_worker_merchant_nhere_with_the_help_of_worker_farmer_sell_their_caltivated_product_to_the_merchant_at_optimal_coast_price">Aggrobuddy is the fine platform for the farmner,Worker,Merchant\nHere with the help of worker farmer sell their caltivated product to the merchant at optimal coast price.</string>
    <string name="some_of_the_function_are_listed_below">Some of the Function are Listed Below :-</string>
    <string name="this_privacy_policy_describes_our_policies_and_procedures_on_the_collection_use_and_disclosure_of_your_information_when_you_use_the_service_and_tells_you_about_your_privacy_rights_and_how_the_law_protects_you_n_nwe_use_your_personal_data_to_provide_and_improve_the_service_by_using_the_service_you_agree_to_the_collection_and_use_of_information_in_accordance_with_this_privacy_policy">This Privacy Policy describes Our policies and procedures on the collection,use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.\n\nWe use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</string>
    <string name="interpretation">Interpretation</string>
    <string name="the_words_of_which_the_initial_letter_is_capitalized_have_meanings_defined_under_the_following_conditions_the_following_definitions_shall_have_the_same_meaning_regardless_of_whether_they_appear_in_singular_or_in_plural">The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</string>
    <string name="for_the_purposes_of_this_privacy_policy_account_means_a_unique_account_created_for_you_to_access_our_service_or_parts_of_our_service_n_n_affiliate_means_an_entity_that_controls_is_controlled_by_or_is_under_common_control_with_a_party_where_means_ownership_of_50_or_more_of_the_shares_equity_interest_or_other_securities_entitled_to_vote_for_election_of_directors_or_other_managing_authority_n_n_application_means_the_software_program_provided_by_the_company_downloaded_by_you_on_any_electronic_device_named_aggrobuddy_n_n_company_refers_to_aggrobuddy_country_refers_to_bihar_india_n_n_device_means_any_device_that_can_access_the_service_such_as_a_computer_a_cellphone_or_a_digital_tablet_personal_data_is_any_information_that_relates_to_an_identified_or_identifiable_individual_n_n_service_refers_to_the_application_n_n_service_provider_means_any_natural_or_legal_person_who_processes_the_data_on_behalf_of_the_company_it_refers_to_third_party_companies_or_individuals_employed_by_the_company_to_facilitate_the_service_to_provide_the_service_on_behalf_of_the_company_to_perform_services_related_to_the_service_or_to_assist_the_company_in_analyzing_how_the_service_is_used_third_party_n_n_social_media_service_refers_to_any_website_or_any_social_network_website_through_which_a_user_can_log_in_or_create_an_account_to_use_the_service_n_n_usage_data_refers_to_data_collected_automatically_either_generated_by_the_use_of_the_service_or_from_the_service_infrastructure_itself_n_n_you_means_the_individual_accessing_or_using_the_service_or_the_company_or_other_legal_entity_on_behalf_of_which_such_individual_is_accessing_or_using_the_service_as_applicable">For the purposes of this Privacy Policy: Account :- means a unique account created for You to access our Service or parts of our Service.\n\n Affiliate :-means an entity that controls, is controlled by or is under common control with a party, where means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.\n\n Application :- means the software program provided by the Company downloaded by You on any electronic device, named Aggrobuddy.\n\n Company:- refers to Aggrobuddy.Country refers to: Bihar, India.\n\n Device :- means any device that can access the Service such as a computer, a cellphone or a digital tablet.Personal Data is any information that relates to an identified or identifiable individual.\n\n Service :- refers to the Application.\n\n Service Provider :- means any natural or legal person who processes the data on behalf of the Company. It refers to third-party companies or individuals employed by the Company to facilitate the Service, to provide the Service on behalf of the Company, to perform services related to the Service or to assist the Company in analyzing how the Service is used. Third-party.\n\n Social Media Service :- refers to any website or any social network website through which a User can log in or create an account to use the Service.\n\n Usage Data refers:- to data collected automatically, either generated by the use of the Service or from the Service infrastructure itself.\n\n You means :- the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</string>
    <string name="difinition">Difinition</string>
    <string name="contact_us">Contact Us</string>
    <string name="by_email_aviashishranjan_gmail_com_by_phone_number_9865324170_by_mail_bairiya_ranjan_apartment_opposite_of_adarsh_nurshing_home_bairiya_patna_800007_privacy_policy_for_aggrobuddy">By email: aviashishranjan@gmail.com By phone number: 9865324170 By mail: Bairiya(Ranjan Apartment opposite of Adarsh Nurshing Home) , Bairiya , patna ,800007 Privacy Policy for Aggrobuddy</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="report_an_app_bug_suggest_an_idea">Report an App bug / Suggest an Idea</string>
    <string name="submit_the_feedback">Submit the Feedback</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>