<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />

        <item
            android:id="@+id/Cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart" />


        <item
            android:id="@+id/TransactionHistory"
            android:icon="@drawable/ic_transaction"
            android:title="@string/transaction_history" />

        <item
            android:id="@+id/FrequentAskQuestion"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />


        <item
            android:id="@+id/developer"
            android:icon="@drawable/ic_developers"
            android:title="@string/developer" />


        <item
            android:id="@+id/AboutApp"
            android:icon="@drawable/ic_aboutapp"
            android:title="@string/about_app" />

        <item
            android:id="@+id/LogOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />

        <item
            android:id="@+id/HelpCenter"
            android:icon="@drawable/ic_lhelpcenter"
            android:title="@string/help_center" />

        <item
            android:id="@+id/PrivacyPolicy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/Send_Feedback"
            android:icon="@drawable/ic_sendfeedback"
            android:title="@string/send_feedback" />

    </group>
</menu>