<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SendFeedBackFragment">

    <!-- TODO: Update blank com.ashish.aggrobuddy.fragment layout -->
    <ImageView
        android:id="@+id/img1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_your_email_id"
        android:padding="15dp" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/report_an_app_bug_suggest_an_idea"
        android:padding="15dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/purple_200"
        android:padding="10dp"
        android:text="@string/submit_the_feedback"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>